# CongressCoin

./: CMakeLists.txt  README.md
CongressCoin/: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  CongressCoin.cpp  CongressCoin.h  Miner.cpp  Miner.h  TransactionData.h
